typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts.stderr
error: TS1042
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts:3:3
  |
3 |   public get foo() { }
  |   ^^^^^^

error: A 'get' accessor must return a value
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts:3:14
  |
3 |   public get foo() { }
  |              ^^^

